Closed
Bug 1127568
Opened 11 years ago
Closed 11 years ago
CONTINUATION frames cause assertions in debug builds
Categories
(Core :: Networking: HTTP, defect)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
mozilla38
People
(Reporter: u408661, Assigned: u408661)
References
Details
(Whiteboard: [spdy])
Attachments
(2 files)
|
9.05 KB,
patch
|
mcmanus
:
review+
|
Details | Diff | Splinter Review |
|
1.09 KB,
patch
|
mcmanus
:
review+
|
Details | Diff | Splinter Review |
When trying to implement PUSH_PROMISE continuations, I caused node-http2 to send a continuation on a HEADERS frame instead, which triggered the assertion at the beginning of Http2Session::RecvHeaders (Http2Session::RecvContinuation calls through to Http2Session::RecvHeaders). This won't be an issue in release builds, since assertions are noops there, but we should fix this (and have a test for continued HEADERS!)
Attachment #8557268 -
Flags: review?(mcmanus)
The tests for this come in the final patch in bug 958712
Attachment #8557270 -
Flags: review?(mcmanus)
Comment 3•11 years ago
|
||
Comment on attachment 8557268 [details] [diff] [review]
Whitespace fixups
Review of attachment 8557268 [details] [diff] [review]:
-----------------------------------------------------------------
thanks.. my editor settings have trouble with ws in js :)
Attachment #8557268 -
Flags: review?(mcmanus) → review+
Updated•11 years ago
|
Attachment #8557270 -
Flags: review?(mcmanus) → review+
Comment 6•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in
before you can comment on or make changes to this bug.
Description
•