Bug 1127568 - Don't assert in debug builds when receiving CONTINUATION on HEADERS. r=mcmanus

--HG--
extra : rebase_source : c561e1db4c383c39b19fe5215944f542d66bc492